# Rytmos

./: .gitignore  Cargo.toml  README.md  TODO.md
bsps/drum_machine/: Cargo.toml
bsps/drum_machine/examples/: blinky.rs
bsps/drum_machine/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
pcbs/: TODO.md
pcbs/drum_machine/: #auto_saved_files#  drum_machine.kicad_pcb  drum_machine.kicad_prl  drum_machine.kicad_pro  drum_machine.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcbs/drum_machine/drum_machine-v0.1/: drum_machine-B_Cu.gbl  drum_machine-B_Mask.gbs  drum_machine-B_Paste.gbp  drum_machine-B_Silkscreen.gbo  drum_machine-Edge_Cuts.gm1  drum_machine-F_Cu.gtl  drum_machine-F_Mask.gts  drum_machine-F_Paste.gtp  drum_machine-F_Silkscreen.gto  drum_machine-NPTH.drl  drum_machine-PTH.drl
pcbs/libs/: rytmos.kicad_sym
pcbs/libs/rytmos.pretty/: Jack_6.3mm.kicad_mod  KAILH_MUTE.kicad_mod  PCM5102_BREAKOUT.kicad_mod  SlimJack6.3.kicad_mod  Untitled.kicad_mod  linpot_75mm.kicad_mod
pcbs/midi_pedals/: fp-info-cache  midi_pedals.kicad_pcb  midi_pedals.kicad_prl  midi_pedals.kicad_pro  midi_pedals.kicad_sch
pcbs/midi_pedals/midi_pedals-v0.1/: midi_pedals-B_Cu.gbr  midi_pedals-B_Mask.gbr  midi_pedals-B_Paste.gbr  midi_pedals-B_Silkscreen.gbr  midi_pedals-Edge_Cuts.gbr  midi_pedals-F_Cu.gbr  midi_pedals-F_Mask.gbr  midi_pedals-F_Paste.gbr  midi_pedals-F_Silkscreen.gbr  midi_pedals-NPTH.drl  midi_pedals-PTH.drl  midi_pedals-job.gbrjob
pcbs/pico_piano/: fp-info-cache  fp-lib-table  pico_piano.kicad_pcb  pico_piano.kicad_prl  pico_piano.kicad_pro  pico_piano.kicad_sch
pcbs/pico_piano/v0.1/: pico_piano-B_Cu.gbl  pico_piano-B_Mask.gbs  pico_piano-B_Paste.gbp  pico_piano-B_Silkscreen.gbo  pico_piano-Edge_Cuts.gm1  pico_piano-F_Cu.gtl  pico_piano-F_Mask.gts  pico_piano-F_Paste.gtp  pico_piano-F_Silkscreen.gto  pico_piano-NPTH-drl_map.gbr  pico_piano-NPTH.drl  pico_piano-PTH-drl_map.gbr  pico_piano-PTH.drl
pcbs/pico_piano/v0.2/: pico_piano-B_Cu.gbl  pico_piano-B_Mask.gbs  pico_piano-B_Paste.gbp  pico_piano-B_Silkscreen.gbo  pico_piano-Edge_Cuts.gm1  pico_piano-F_Cu.gtl  pico_piano-F_Mask.gts  pico_piano-F_Paste.gtp  pico_piano-F_Silkscreen.gto  pico_piano-NPTH-drl_map.gbr  pico_piano-NPTH.drl  pico_piano-PTH-drl_map.gbr  pico_piano-PTH.drl
pcbs/rytmos_zero/: rytmos_zero.kicad_prl  rytmos_zero.kicad_pro  rytmos_zero.kicad_sch  sym-lib-table
pcbs/slidebyte/: fp-lib-table  slidebyte.kicad_prl  slidebyte.kicad_pro  slidebyte.kicad_sch
pcbs/the_ridge/: IDEA.md
pcbs/the_ridge/the_ridge/: fp-info-cache  fp-lib-table  sym-lib-table  the_ridge.kicad_prl  the_ridge.kicad_pro  the_ridge.kicad_sch
rytmos/: Cargo.toml  bass_clef.xcf  glyphs.xcf  notes.py  rhythms.txt
rytmos-engrave/: Cargo.toml
rytmos-engrave/src/: frequencies.rs  lib.rs  macros.rs  staff.rs  symbols.rs
rytmos-pico/: Cargo.toml  README.md
rytmos-pico/.cargo/: config.toml
rytmos-pico/common/: Cargo.toml
rytmos-pico/common/src/: consts.rs  debouncer.rs  i2s.pio  lib.rs  pio.rs  plls.rs  setup_macros.rs
rytmos-pico/drum_machine/: Cargo.toml
rytmos-pico/drum_machine/src/: cd4051.rs  io.rs  lib.rs  main.rs  sequencer.rs
rytmos-pico/hello_pico/: Cargo.toml
rytmos-pico/hello_pico/src/: main.rs
rytmos-pico/i2s_testbed/: Cargo.toml
rytmos-pico/i2s_testbed/src/: main.rs
rytmos-pico/midi_pedals/: Cargo.toml
rytmos-pico/midi_pedals/src/: main.rs
rytmos-pico/pico_piano/: Cargo.toml
rytmos-pico/pico_piano/src/: main.rs
rytmos-pico/polypicophonic/: Cargo.toml
rytmos-pico/polypicophonic/polypicophonic/: Cargo.toml
rytmos-pico/polypicophonic/polypicophonic/src/: chords.rs  clavier.rs  interface.rs  io.rs  lib.rs  synth.rs
rytmos-pico/polypicophonic/polypicophonic/src/interface/: chordloops.rs  sandbox.rs
rytmos-pico/polypicophonic/rp2040/: Cargo.toml
rytmos-pico/polypicophonic/rp2040/src/: io.rs  main.rs
rytmos-pico/polypicophonic/src/: chords.rs  clavier.rs  interface.rs  lib.rs  main.rs
rytmos-pico/polypicophonic/src/interface/: chordloops.rs  sandbox.rs
rytmos-pico/polypicophonic/wasm-audio/: Cargo.toml  build.sh
rytmos-pico/polypicophonic/wasm-audio/assets/: TextDecoder.js  worklet.js
rytmos-pico/polypicophonic/wasm-audio/src/: lib.rs  oscillator.rs
rytmos-pico/polypicophonic/web/: Cargo.toml  Dioxus.toml  build.rs
rytmos-pico/polypicophonic/web/assets/: stylesheet.css  wasm_audio.js  wasm_audio_bg.wasm
rytmos-pico/polypicophonic/web/src/: io.rs  main.rs
rytmos-pico/practice_bass/: Cargo.toml  frets.py  notes.md
rytmos-pico/practice_bass/.cargo/: config.toml
rytmos-pico/practice_bass/src/: frets.rs  lib.rs  main.rs
rytmos-pico/rytmos_zero/: Cargo.toml
rytmos-pico/rytmos_zero/src/: lib.rs  main.rs
rytmos-pico/src/: i2s.pio  main.rs
rytmos-scribe/: Cargo.toml
rytmos-scribe/src/: lib.rs  sixteen_switches.rs
rytmos-scribe/tests/: lib.rs
rytmos-symbols/: Cargo.toml  menu.xcf
rytmos-symbols/src/: lib.rs
rytmos-synth/: Cargo.toml
rytmos-synth/src/: commands.rs  effect.rs  lib.rs  synth.rs  wavetables.rs
rytmos-synth/src/effect/: amplify.rs  exponential_decay.rs  linear_decay.rs  lpf.rs
rytmos-synth/src/synth/: composed.rs  drum.rs  lpf.rs  master.rs  metronome.rs  mod.rs  nothing.rs  overtone.rs  sample.rs  samples.rs  sawtooth.rs  sine.rs  vibrato.rs
rytmos-synth/src/synth/composed/: overtone.rs  polyphonic.rs  synth_with_effects.rs
rytmos-synth/src/synth/samples/: hihat.rs  kick.rs  snare.rs  strong.rs  weak.rs
rytmos-synth/tests/: command_messages.rs  lib.rs  samples.rs
rytmos-synth/tests/effects/: amplify.rs
rytmos-ui/: Cargo.toml
rytmos-ui/src/: bare_menu.rs  interface.rs  lib.rs  play_analysis.rs  playing.rs  synth_controller.rs
rytmos-ui/tests/: lib.rs
rytmos/src/: staff.rs  symbols.rs
sim/: Cargo.toml
sim/src/: main.rs
wasm-audio/: Cargo.toml
wasm-audio/src/: lib.rs
