[package]
name = "rytmos-synth"
version = "0.1.0"
edition = "2021"
description = "Basic synthesizer for rytmos types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.3"
hound = "3.5.1"
plotters = "0.3.6"
