[package]
name = "rytmos-synth"
version = "0.1.0"
edition = "2021"
description = "Basic synthesizer for rytmos types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.27.0"
libm = "0.2.8"
log = "0.4.22"
defmt = "0.3.5"
rytmos-engrave = { path = "../rytmos-engrave" }
derivative = { version = "2.2.0", features = ["use_core"] }

[dev-dependencies]
env_logger = "0.11.3"
hound = "3.5.1"
plotters = "0.3.6"
rand = "0.8.5"
