[package]
name = "rytmos-ui"
version = "0.1.0"
edition = "2021"
description = "User interfaces for practicing using rytmos-scribe, engrave, synth"

[dependencies]
libm = "0.2.8"
log = "0.4.22"
rytmos-engrave = { path = "../rytmos-engrave" }
rytmos-scribe = { path = "../rytmos-scribe" }
rytmos-synth = { path = "../rytmos-synth" }
embedded-graphics = "0.8.1"
heapless = "0.8.0"

[dev-dependencies]
env_logger = "0.11.3"
hound = "3.5.1"
plotters = "0.3.6"
