[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
env_logger = "0.11.3"
log = "0.4.22"
rytmos = { path = "../rytmos" }
