[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fugit = "0.3.7"
rp2040-hal = { version = "0.11.0", optional = true }
defmt = "0.3.5"
pio = "0.2.1"
pio-proc = "0.2.2"

[features]
rp-pico = ["dep:rp2040-hal"]
