[package]
name = "i2s-testbed"
version = "0.1.0"
edition = "2021"
description = "Minimal binary that generates a varying tone over I2S."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.27.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
log = "0.4.22"
defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = { version = "0.8.0", default-features = false, features = ["rt", "critical-section-impl", "rom-func-cache"] }
fugit = "0.3.7"
pio = "0.2.1"
pio-proc = "0.2.2"
heapless = "0.7.16"
rp2040-boot2 = "0.2.1"
libm = "0.2.8"
micromath = "2.1.0"
rytmos-engrave = { path = "../../rytmos-engrave" }
rytmos-scribe = { path = "../../rytmos-scribe" }
rytmos-synth = { path = "../../rytmos-synth" }
rytmos-ui = { path = "../../rytmos-ui" }
common = { path = "../common" }
