[package]
name = "midi_pedals"
version = "0.1.0"
edition = "2021"
description = "Connect pedals to an rp2040 and send MIDI codes."

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
log = "0.4.22"
defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = { version = "0.9.0", default-features = false, features = [
    "rt",
    "critical-section-impl",
    "rom-func-cache",
] }
fugit = "0.3.7"
rp2040-boot2 = "0.2.1"
usbd-midi = "0.5"
usb-device = { version = "0.3.2", features = ["log", "defmt"] }
common = { version = "0.1.0", path = "../common" }

[features]
benchmark = []
