[package]
name = "polypicophonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.27.0"
log = "0.4.22"
defmt = "0.3.5"
heapless = "0.7.16"
# TODO: move these to a library repo and have repo per "product"
rytmos-engrave = { path = "../../../rytmos-engrave" }
rytmos-synth = { path = "../../../rytmos-synth" }
common = { path = "../../common", features = ["rp-pico"] }
enum-iterator = "2.1.0"
