[package]
name = "wasm-audio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
fixed = "1.29.0"
js-sys = "0.3.77"
log = "0.4.27"
polypicophonic = { version = "0.1.0", path = "../polypicophonic", features = [
    "std",
] }
rytmos-engrave = { version = "0.1.0", path = "../../../rytmos-engrave" }
rytmos-synth = { path = "../../../rytmos-synth" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = ["MessagePort", "MessageEvent"]
